# ai-transition

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: prompt_iteration_log.md
src/: check_labels.py  compare_prompts.py  compare_prompts_v2_v3.py  eda_machine.py  hello.py  inspect_machine_data.py  l4_cot_claude.py  llm_client.py  load_feedback.py  mini_chain.py  models.py  pipeline_demo.py  pipeline_model.py  prompts.py  tool_demo.py  train_baseline.py  try_structured.py
