[project]
name = "ai-transition"
version = "0.1.0"
description = "16-week Data Analyst -> AI transition project"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.112",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pyarrow>=21.0.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

# Tell uv this is an app, not a library to build/install — just manage deps.
[tool.uv]
package = false
